sql_engine/sql_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sql_statement
Rule 1     sql_statement -> query
Rule 2     sql_statement -> create_schema
Rule 3     sql_statement -> create_table
Rule 4     sql_statement -> insert_statement
Rule 5     query -> SELECT select_columns FROM IDENTIFIER
Rule 6     query -> SELECT select_columns FROM IDENTIFIER where_clause
Rule 7     where_clause -> WHERE IDENTIFIER EQUALS number_or_string
Rule 8     select_columns -> STAR COMMA select_columns
Rule 9     select_columns -> STAR
Rule 10    select_columns -> IDENTIFIER COMMA select_columns
Rule 11    select_columns -> IDENTIFIER
Rule 12    create_schema -> CREATE SCHEMA IDENTIFIER
Rule 13    create_table -> CREATE TABLE IDENTIFIER LPAREN create_table_columns RPAREN
Rule 14    create_table_columns -> table_column_definition COMMA create_table_columns
Rule 15    create_table_columns -> table_column_definition
Rule 16    table_column_definition -> IDENTIFIER column_type
Rule 17    table_column_definition -> IDENTIFIER column_type PRIMARY KEY
Rule 18    column_type -> INT
Rule 19    column_type -> STRING
Rule 20    insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values
Rule 21    insert_column_names -> IDENTIFIER COMMA insert_column_names
Rule 22    insert_column_names -> IDENTIFIER
Rule 23    insert_column_values -> LPAREN insert_values RPAREN COMMA insert_column_values
Rule 24    insert_column_values -> LPAREN insert_values RPAREN
Rule 25    insert_values -> number_or_string COMMA insert_values
Rule 26    insert_values -> number_or_string
Rule 27    number_or_string -> STRING
Rule 28    number_or_string -> NUMBER

Terminals, with rules where they appear

COMMA                : 8 10 14 21 23 25
CREATE               : 12 13
EQUALS               : 7
FROM                 : 5 6
IDENTIFIER           : 5 6 7 10 11 12 13 16 17 20 21 22
INSERT               : 20
INT                  : 18
INTO                 : 20
KEY                  : 17
LPAREN               : 13 20 23 24
NUMBER               : 28
PRIMARY              : 17
RPAREN               : 13 20 23 24
SCHEMA               : 12
SELECT               : 5 6
STAR                 : 8 9
STRING               : 19 27
TABLE                : 13
VALUES               : 20
WHERE                : 7
error                : 

Nonterminals, with rules where they appear

column_type          : 16 17
create_schema        : 2
create_table         : 3
create_table_columns : 13 14
insert_column_names  : 20 21
insert_column_values : 20 23
insert_statement     : 4
insert_values        : 23 24 25
number_or_string     : 7 25 26
query                : 1
select_columns       : 5 6 8 10
sql_statement        : 0
table_column_definition : 14 15
where_clause         : 6

Parsing method: LALR

state 0

    (0) S' -> . sql_statement
    (1) sql_statement -> . query
    (2) sql_statement -> . create_schema
    (3) sql_statement -> . create_table
    (4) sql_statement -> . insert_statement
    (5) query -> . SELECT select_columns FROM IDENTIFIER
    (6) query -> . SELECT select_columns FROM IDENTIFIER where_clause
    (12) create_schema -> . CREATE SCHEMA IDENTIFIER
    (13) create_table -> . CREATE TABLE IDENTIFIER LPAREN create_table_columns RPAREN
    (20) insert_statement -> . INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values

    SELECT          shift and go to state 6
    CREATE          shift and go to state 7
    INSERT          shift and go to state 8

    sql_statement                  shift and go to state 1
    query                          shift and go to state 2
    create_schema                  shift and go to state 3
    create_table                   shift and go to state 4
    insert_statement               shift and go to state 5

state 1

    (0) S' -> sql_statement .



state 2

    (1) sql_statement -> query .

    $end            reduce using rule 1 (sql_statement -> query .)


state 3

    (2) sql_statement -> create_schema .

    $end            reduce using rule 2 (sql_statement -> create_schema .)


state 4

    (3) sql_statement -> create_table .

    $end            reduce using rule 3 (sql_statement -> create_table .)


state 5

    (4) sql_statement -> insert_statement .

    $end            reduce using rule 4 (sql_statement -> insert_statement .)


state 6

    (5) query -> SELECT . select_columns FROM IDENTIFIER
    (6) query -> SELECT . select_columns FROM IDENTIFIER where_clause
    (8) select_columns -> . STAR COMMA select_columns
    (9) select_columns -> . STAR
    (10) select_columns -> . IDENTIFIER COMMA select_columns
    (11) select_columns -> . IDENTIFIER

    STAR            shift and go to state 11
    IDENTIFIER      shift and go to state 10

    select_columns                 shift and go to state 9

state 7

    (12) create_schema -> CREATE . SCHEMA IDENTIFIER
    (13) create_table -> CREATE . TABLE IDENTIFIER LPAREN create_table_columns RPAREN

    SCHEMA          shift and go to state 12
    TABLE           shift and go to state 13


state 8

    (20) insert_statement -> INSERT . INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values

    INTO            shift and go to state 14


state 9

    (5) query -> SELECT select_columns . FROM IDENTIFIER
    (6) query -> SELECT select_columns . FROM IDENTIFIER where_clause

    FROM            shift and go to state 15


state 10

    (10) select_columns -> IDENTIFIER . COMMA select_columns
    (11) select_columns -> IDENTIFIER .

    COMMA           shift and go to state 16
    FROM            reduce using rule 11 (select_columns -> IDENTIFIER .)


state 11

    (8) select_columns -> STAR . COMMA select_columns
    (9) select_columns -> STAR .

    COMMA           shift and go to state 17
    FROM            reduce using rule 9 (select_columns -> STAR .)


state 12

    (12) create_schema -> CREATE SCHEMA . IDENTIFIER

    IDENTIFIER      shift and go to state 18


state 13

    (13) create_table -> CREATE TABLE . IDENTIFIER LPAREN create_table_columns RPAREN

    IDENTIFIER      shift and go to state 19


state 14

    (20) insert_statement -> INSERT INTO . IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values

    IDENTIFIER      shift and go to state 20


state 15

    (5) query -> SELECT select_columns FROM . IDENTIFIER
    (6) query -> SELECT select_columns FROM . IDENTIFIER where_clause

    IDENTIFIER      shift and go to state 21


state 16

    (10) select_columns -> IDENTIFIER COMMA . select_columns
    (8) select_columns -> . STAR COMMA select_columns
    (9) select_columns -> . STAR
    (10) select_columns -> . IDENTIFIER COMMA select_columns
    (11) select_columns -> . IDENTIFIER

    STAR            shift and go to state 11
    IDENTIFIER      shift and go to state 10

    select_columns                 shift and go to state 22

state 17

    (8) select_columns -> STAR COMMA . select_columns
    (8) select_columns -> . STAR COMMA select_columns
    (9) select_columns -> . STAR
    (10) select_columns -> . IDENTIFIER COMMA select_columns
    (11) select_columns -> . IDENTIFIER

    STAR            shift and go to state 11
    IDENTIFIER      shift and go to state 10

    select_columns                 shift and go to state 23

state 18

    (12) create_schema -> CREATE SCHEMA IDENTIFIER .

    $end            reduce using rule 12 (create_schema -> CREATE SCHEMA IDENTIFIER .)


state 19

    (13) create_table -> CREATE TABLE IDENTIFIER . LPAREN create_table_columns RPAREN

    LPAREN          shift and go to state 24


state 20

    (20) insert_statement -> INSERT INTO IDENTIFIER . LPAREN insert_column_names RPAREN VALUES insert_column_values

    LPAREN          shift and go to state 25


state 21

    (5) query -> SELECT select_columns FROM IDENTIFIER .
    (6) query -> SELECT select_columns FROM IDENTIFIER . where_clause
    (7) where_clause -> . WHERE IDENTIFIER EQUALS number_or_string

    $end            reduce using rule 5 (query -> SELECT select_columns FROM IDENTIFIER .)
    WHERE           shift and go to state 27

    where_clause                   shift and go to state 26

state 22

    (10) select_columns -> IDENTIFIER COMMA select_columns .

    FROM            reduce using rule 10 (select_columns -> IDENTIFIER COMMA select_columns .)


state 23

    (8) select_columns -> STAR COMMA select_columns .

    FROM            reduce using rule 8 (select_columns -> STAR COMMA select_columns .)


state 24

    (13) create_table -> CREATE TABLE IDENTIFIER LPAREN . create_table_columns RPAREN
    (14) create_table_columns -> . table_column_definition COMMA create_table_columns
    (15) create_table_columns -> . table_column_definition
    (16) table_column_definition -> . IDENTIFIER column_type
    (17) table_column_definition -> . IDENTIFIER column_type PRIMARY KEY

    IDENTIFIER      shift and go to state 28

    create_table_columns           shift and go to state 29
    table_column_definition        shift and go to state 30

state 25

    (20) insert_statement -> INSERT INTO IDENTIFIER LPAREN . insert_column_names RPAREN VALUES insert_column_values
    (21) insert_column_names -> . IDENTIFIER COMMA insert_column_names
    (22) insert_column_names -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    insert_column_names            shift and go to state 32

state 26

    (6) query -> SELECT select_columns FROM IDENTIFIER where_clause .

    $end            reduce using rule 6 (query -> SELECT select_columns FROM IDENTIFIER where_clause .)


state 27

    (7) where_clause -> WHERE . IDENTIFIER EQUALS number_or_string

    IDENTIFIER      shift and go to state 33


state 28

    (16) table_column_definition -> IDENTIFIER . column_type
    (17) table_column_definition -> IDENTIFIER . column_type PRIMARY KEY
    (18) column_type -> . INT
    (19) column_type -> . STRING

    INT             shift and go to state 35
    STRING          shift and go to state 36

    column_type                    shift and go to state 34

state 29

    (13) create_table -> CREATE TABLE IDENTIFIER LPAREN create_table_columns . RPAREN

    RPAREN          shift and go to state 37


state 30

    (14) create_table_columns -> table_column_definition . COMMA create_table_columns
    (15) create_table_columns -> table_column_definition .

    COMMA           shift and go to state 38
    RPAREN          reduce using rule 15 (create_table_columns -> table_column_definition .)


state 31

    (21) insert_column_names -> IDENTIFIER . COMMA insert_column_names
    (22) insert_column_names -> IDENTIFIER .

    COMMA           shift and go to state 39
    RPAREN          reduce using rule 22 (insert_column_names -> IDENTIFIER .)


state 32

    (20) insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names . RPAREN VALUES insert_column_values

    RPAREN          shift and go to state 40


state 33

    (7) where_clause -> WHERE IDENTIFIER . EQUALS number_or_string

    EQUALS          shift and go to state 41


state 34

    (16) table_column_definition -> IDENTIFIER column_type .
    (17) table_column_definition -> IDENTIFIER column_type . PRIMARY KEY

    COMMA           reduce using rule 16 (table_column_definition -> IDENTIFIER column_type .)
    RPAREN          reduce using rule 16 (table_column_definition -> IDENTIFIER column_type .)
    PRIMARY         shift and go to state 42


state 35

    (18) column_type -> INT .

    PRIMARY         reduce using rule 18 (column_type -> INT .)
    COMMA           reduce using rule 18 (column_type -> INT .)
    RPAREN          reduce using rule 18 (column_type -> INT .)


state 36

    (19) column_type -> STRING .

    PRIMARY         reduce using rule 19 (column_type -> STRING .)
    COMMA           reduce using rule 19 (column_type -> STRING .)
    RPAREN          reduce using rule 19 (column_type -> STRING .)


state 37

    (13) create_table -> CREATE TABLE IDENTIFIER LPAREN create_table_columns RPAREN .

    $end            reduce using rule 13 (create_table -> CREATE TABLE IDENTIFIER LPAREN create_table_columns RPAREN .)


state 38

    (14) create_table_columns -> table_column_definition COMMA . create_table_columns
    (14) create_table_columns -> . table_column_definition COMMA create_table_columns
    (15) create_table_columns -> . table_column_definition
    (16) table_column_definition -> . IDENTIFIER column_type
    (17) table_column_definition -> . IDENTIFIER column_type PRIMARY KEY

    IDENTIFIER      shift and go to state 28

    table_column_definition        shift and go to state 30
    create_table_columns           shift and go to state 43

state 39

    (21) insert_column_names -> IDENTIFIER COMMA . insert_column_names
    (21) insert_column_names -> . IDENTIFIER COMMA insert_column_names
    (22) insert_column_names -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    insert_column_names            shift and go to state 44

state 40

    (20) insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN . VALUES insert_column_values

    VALUES          shift and go to state 45


state 41

    (7) where_clause -> WHERE IDENTIFIER EQUALS . number_or_string
    (27) number_or_string -> . STRING
    (28) number_or_string -> . NUMBER

    STRING          shift and go to state 47
    NUMBER          shift and go to state 48

    number_or_string               shift and go to state 46

state 42

    (17) table_column_definition -> IDENTIFIER column_type PRIMARY . KEY

    KEY             shift and go to state 49


state 43

    (14) create_table_columns -> table_column_definition COMMA create_table_columns .

    RPAREN          reduce using rule 14 (create_table_columns -> table_column_definition COMMA create_table_columns .)


state 44

    (21) insert_column_names -> IDENTIFIER COMMA insert_column_names .

    RPAREN          reduce using rule 21 (insert_column_names -> IDENTIFIER COMMA insert_column_names .)


state 45

    (20) insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES . insert_column_values
    (23) insert_column_values -> . LPAREN insert_values RPAREN COMMA insert_column_values
    (24) insert_column_values -> . LPAREN insert_values RPAREN

    LPAREN          shift and go to state 50

    insert_column_values           shift and go to state 51

state 46

    (7) where_clause -> WHERE IDENTIFIER EQUALS number_or_string .

    $end            reduce using rule 7 (where_clause -> WHERE IDENTIFIER EQUALS number_or_string .)


state 47

    (27) number_or_string -> STRING .

    $end            reduce using rule 27 (number_or_string -> STRING .)
    COMMA           reduce using rule 27 (number_or_string -> STRING .)
    RPAREN          reduce using rule 27 (number_or_string -> STRING .)


state 48

    (28) number_or_string -> NUMBER .

    $end            reduce using rule 28 (number_or_string -> NUMBER .)
    COMMA           reduce using rule 28 (number_or_string -> NUMBER .)
    RPAREN          reduce using rule 28 (number_or_string -> NUMBER .)


state 49

    (17) table_column_definition -> IDENTIFIER column_type PRIMARY KEY .

    COMMA           reduce using rule 17 (table_column_definition -> IDENTIFIER column_type PRIMARY KEY .)
    RPAREN          reduce using rule 17 (table_column_definition -> IDENTIFIER column_type PRIMARY KEY .)


state 50

    (23) insert_column_values -> LPAREN . insert_values RPAREN COMMA insert_column_values
    (24) insert_column_values -> LPAREN . insert_values RPAREN
    (25) insert_values -> . number_or_string COMMA insert_values
    (26) insert_values -> . number_or_string
    (27) number_or_string -> . STRING
    (28) number_or_string -> . NUMBER

    STRING          shift and go to state 47
    NUMBER          shift and go to state 48

    insert_values                  shift and go to state 52
    number_or_string               shift and go to state 53

state 51

    (20) insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values .

    $end            reduce using rule 20 (insert_statement -> INSERT INTO IDENTIFIER LPAREN insert_column_names RPAREN VALUES insert_column_values .)


state 52

    (23) insert_column_values -> LPAREN insert_values . RPAREN COMMA insert_column_values
    (24) insert_column_values -> LPAREN insert_values . RPAREN

    RPAREN          shift and go to state 54


state 53

    (25) insert_values -> number_or_string . COMMA insert_values
    (26) insert_values -> number_or_string .

    COMMA           shift and go to state 55
    RPAREN          reduce using rule 26 (insert_values -> number_or_string .)


state 54

    (23) insert_column_values -> LPAREN insert_values RPAREN . COMMA insert_column_values
    (24) insert_column_values -> LPAREN insert_values RPAREN .

    COMMA           shift and go to state 56
    $end            reduce using rule 24 (insert_column_values -> LPAREN insert_values RPAREN .)


state 55

    (25) insert_values -> number_or_string COMMA . insert_values
    (25) insert_values -> . number_or_string COMMA insert_values
    (26) insert_values -> . number_or_string
    (27) number_or_string -> . STRING
    (28) number_or_string -> . NUMBER

    STRING          shift and go to state 47
    NUMBER          shift and go to state 48

    number_or_string               shift and go to state 53
    insert_values                  shift and go to state 57

state 56

    (23) insert_column_values -> LPAREN insert_values RPAREN COMMA . insert_column_values
    (23) insert_column_values -> . LPAREN insert_values RPAREN COMMA insert_column_values
    (24) insert_column_values -> . LPAREN insert_values RPAREN

    LPAREN          shift and go to state 50

    insert_column_values           shift and go to state 58

state 57

    (25) insert_values -> number_or_string COMMA insert_values .

    RPAREN          reduce using rule 25 (insert_values -> number_or_string COMMA insert_values .)


state 58

    (23) insert_column_values -> LPAREN insert_values RPAREN COMMA insert_column_values .

    $end            reduce using rule 23 (insert_column_values -> LPAREN insert_values RPAREN COMMA insert_column_values .)

